# polarity-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUP.md  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  app.py  pyproject.toml
docs/assets/: README.md
src/polarity_agent/: cli.py  server.py  web.py
src/polarity_agent/packs/: _installer.py
src/polarity_agent/packs/_builtin/advocatus/: config.json  system_prompt.txt
src/polarity_agent/packs/_builtin/inquisitor/: config.json  system_prompt.txt
src/polarity_agent/static/: index.html
tests/: test_agent.py  test_api.py  test_packs.py  test_providers.py  test_smoke.py  test_tracing.py
tests/persona/: conftest.py  test_red_team.py
