[project]
name = "polarity-agent"
version = "0.1.0"
description = "An open-source satirical agent framework for extreme emotional polarity — because AI doesn't have to be boring."
readme = "README.md"
license = "MIT"
authors = [
    { name = "HeroBlast10", email = "xfwang@link.cuhk.edu.hk" },
]
requires-python = ">=3.10"
keywords = ["ai", "agent", "satire", "humor", "polarity", "persona"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
]

[project.optional-dependencies]
ollama = ["httpx>=0.27"]
openai = ["openai>=1.0"]
litellm = ["litellm>=1.0"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "streamlit>=1.40",
]
all = [
    "httpx>=0.27",
    "openai>=1.0",
    "litellm>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "streamlit>=1.40",
]

[project.urls]
Homepage = "https://github.com/HeroBlast10/polarity-agent"
Repository = "https://github.com/HeroBlast10/polarity-agent"
Issues = "https://github.com/HeroBlast10/polarity-agent/issues"

[project.scripts]
polarity = "polarity_agent.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

# ── Development dependencies ────────────────────────────────────────────
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — formatter handles this
    "B008",   # function calls in defaults — required by typer/fastapi
]

[tool.ruff.lint.isort]
known-first-party = ["polarity_agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
xfail_strict = true
markers = [
    "asyncio: async test (auto-configured by pytest-asyncio)",
    "redteam: red-team integration tests requiring a live LLM provider",
]

# ── Coverage ─────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["polarity_agent"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 60
